--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ashneet Singh Gulati</title>
+  <title>Ashneet</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet" />
   <style>
     * {
@@ -111,7 +111,7 @@
   <div class="bg-animation"></div>
 
   <div class="container">
-    <h1>Ashneet Singh<br>Gulati</h1>
+    <h1>Ashneet</h1>
     <div class="avatar"></div>
     <div class="info">📅 12. Oktober 2006</div>
     <div class="quote">"Never give up – Level up!"</div>
