--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ashneet</title>
+  <title>Ashneet Singh</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet" />
   <style>
     * {
@@ -17,16 +17,52 @@
       background: #0b0b0b;
       color: #00f6ff;
       overflow-x: hidden;
+      position: relative;
+      height: 100vh;
     }
 
+    /* Nachthimmel-Verlauf */
     .bg-animation {
       position: fixed;
       width: 100%;
       height: 100%;
-      background: linear-gradient(130deg, #000000 0%, #111 50%, #000000 100%);
+      background: linear-gradient(180deg, #0a1a3a 0%, #000011 80%, #000000 100%);
       background-size: 400% 400%;
       animation: moveBg 20s ease infinite;
       z-index: 0;
+      filter: brightness(0.8);
+    }
+
+    /* Canvas für funkelnde Sterne */
+    #stars {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw;
+      height: 100vh;
+      pointer-events: none;
+      z-index: 1;
+      display: block;
+    }
+
+    .scanlines {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: repeating-linear-gradient(
+        180deg,
+        rgba(255,255,255,0.03),
+        rgba(255,255,255,0.03) 1px,
+        transparent 1px,
+        transparent 3px
+      );
+      pointer-events: none;
+      z-index: 3;
+      animation: scanlineMove 10s linear infinite;
+    }
+
+    @keyframes scanlineMove {
+      0% { background-position: 0 0; }
+      100% { background-position: 0 100%; }
     }
 
     @keyframes moveBg {
@@ -37,7 +73,7 @@
 
     .container {
       position: relative;
-      z-index: 1;
+      z-index: 5;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -50,32 +86,83 @@
     h1 {
       font-size: 2.8rem;
       color: #00f6ff;
-      text-shadow: 0 0 12px #00f6ff;
+      text-shadow:
+        0 0 10px #00f6ff,
+        0 0 20px #00f6ff,
+        0 0 30px #7fffd4,
+        0 0 40px #00f6ff;
       margin-bottom: 20px;
+      animation: glitch 3s infinite;
+      position: relative;
+    }
+
+    @keyframes glitch {
+      0%, 100% {
+        text-shadow:
+          0 0 10px #00f6ff,
+          0 0 20px #00f6ff,
+          0 0 30px #7fffd4,
+          0 0 40px #00f6ff;
+      }
+      25% {
+        text-shadow:
+          2px 0 #ff00c8,
+          -2px 0 #00f6ff,
+          0 2px #7fffd4,
+          0 -2px #00f6ff;
+      }
+      50% {
+        text-shadow:
+          -2px 0 #ff00c8,
+          2px 0 #00f6ff,
+          0 -2px #7fffd4,
+          0 2px #00f6ff;
+      }
+      75% {
+        text-shadow:
+          1px 1px #ff00c8,
+          -1px -1px #00f6ff,
+          1px -1px #7fffd4,
+          -1px 1px #00f6ff;
+      }
     }
 
     .avatar {
       width: 150px;
       height: 150px;
       border-radius: 50%;
-      background-image: url('https://i.imgur.com/Kcx1tUj.png'); /* Ersatzbild funktioniert garantiert */
+      background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="150" height="150" viewBox="0 0 150 150"><defs><radialGradient id="neon" cx="50%" cy="50%" r="50%"><stop offset="0%" stop-color="%2300f6ff" stop-opacity="1"/><stop offset="70%" stop-color="%2300f6ff" stop-opacity="0.1"/><stop offset="100%" stop-color="%2300f6ff" stop-opacity="0"/></radialGradient></defs><circle cx="75" cy="75" r="65" fill="url(%23neon)" stroke="%2300f6ff" stroke-width="4"/><circle cx="75" cy="75" r="40" stroke="%237fffd4" stroke-width="3" fill="none"/><path d="M45 90 L75 50 L105 90" stroke="%2300f6ff" stroke-width="4" fill="none" stroke-linejoin="round"/></svg>');
       background-size: cover;
       background-position: center;
       border: 3px solid #00f6ff;
       box-shadow: 0 0 30px #00f6ff;
       margin-bottom: 20px;
+      animation: pulseNeon 2.5s ease-in-out infinite;
+    }
+
+    @keyframes pulseNeon {
+      0%, 100% {
+        box-shadow: 0 0 30px #00f6ff, 0 0 50px #00f6ff, 0 0 70px #00f6ff;
+        border-color: #00f6ff;
+      }
+      50% {
+        box-shadow: 0 0 15px #7fffd4, 0 0 40px #7fffd4, 0 0 60px #7fffd4;
+        border-color: #7fffd4;
+      }
     }
 
     .info {
       color: #ffffff;
       font-size: 1rem;
       margin-bottom: 8px;
+      text-shadow: 0 0 10px #00f6ff;
     }
 
     .quote {
       font-style: italic;
       color: #a0f;
       margin-bottom: 25px;
+      text-shadow: 0 0 10px #a0a0ff;
     }
 
     .links a {
@@ -91,6 +178,24 @@
       background: transparent;
       box-shadow: 0 0 12px #00f6ff;
       transition: 0.3s ease;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .links a::before {
+      content: '';
+      position: absolute;
+      top: 0; left: -75%;
+      width: 50%;
+      height: 100%;
+      background: linear-gradient(120deg, transparent, rgba(0, 246, 255, 0.7), transparent);
+      transform: skewX(-25deg);
+      transition: 0.5s;
+    }
+
+    .links a:hover::before {
+      left: 125%;
+      transition: 0.5s;
     }
 
     .links a:hover {
@@ -103,16 +208,59 @@
       margin-top: 40px;
       font-size: 0.9rem;
       color: #666;
+      user-select: none;
+      letter-spacing: 1px;
+    }
+
+    /* Sternschnuppen Container */
+    .shooting-stars {
+      pointer-events: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw;
+      height: 100vh;
+      overflow: visible;
+      z-index: 4;
+    }
+
+    .shooting-star {
+      position: absolute;
+      width: 80px;
+      height: 2px;
+      background: linear-gradient(90deg, white, rgba(255, 255, 255, 0));
+      opacity: 0.8;
+      border-radius: 999px;
+      filter: drop-shadow(0 0 6px #00f6ff);
+      transform: rotate(45deg);
+      animation-timing-function: linear;
+      animation-fill-mode: forwards;
+    }
+
+    /* Animation für Sternschnuppen */
+    @keyframes shoot {
+      0% {
+        transform: translateX(0) translateY(0) rotate(45deg);
+        opacity: 0.8;
+      }
+      100% {
+        transform: translateX(120vw) translateY(120vh) rotate(45deg);
+        opacity: 0;
+      }
     }
   </style>
 </head>
 <body>
 
   <div class="bg-animation"></div>
+  <canvas id="stars"></canvas>
+  <div class="scanlines"></div>
+
+  <div class="shooting-stars" id="shootingStars"></div>
 
   <div class="container">
-    <h1>Ashneet</h1>
+    <h1>Ashneet Singh</h1>
     <div class="avatar"></div>
+ 
     <div class="quote">"Never give up – Level up!"</div>
 
     <div class="links">
@@ -123,6 +271,103 @@
 
     <footer>© 2025 Ashneet | Gamer × Anime × Neon Vibes</footer>
   </div>
+
+  <script>
+    // Sternenhimmel mit Canvas
+    const canvas = document.getElementById('stars');
+    const ctx = canvas.getContext('2d');
+    let width, height;
+    let stars = [];
+
+    function initCanvas() {
+      width = window.innerWidth;
+      height = window.innerHeight;
+      canvas.width = width;
+      canvas.height = height;
+    }
+
+    class Star {
+      constructor() {
+        this.x = Math.random() * width;
+        this.y = Math.random() * height;
+        this.radius = Math.random() * 1.2 + 0.3;
+        this.alpha = Math.random();
+        this.alphaChange = Math.random() * 0.02 + 0.005;
+      }
+      draw() {
+        ctx.beginPath();
+        ctx.arc(this.x, this.y, this.radius, 0, 2 * Math.PI);
+        ctx.fillStyle = `rgba(255,255,255,${this.alpha})`;
+        ctx.shadowColor = '#00f6ff';
+        ctx.shadowBlur = 5;
+        ctx.fill();
+      }
+      update() {
+        this.alpha += this.alphaChange;
+        if(this.alpha <= 0 || this.alpha >= 1) this.alphaChange = -this.alphaChange;
+      }
+    }
+
+    function createStars(count) {
+      stars = [];
+      for(let i = 0; i < count; i++) {
+        stars.push(new Star());
+      }
+    }
+
+    function animateStars() {
+      ctx.clearRect(0, 0, width, height);
+      stars.forEach(star => {
+        star.update();
+        star.draw();
+      });
+      requestAnimationFrame(animateStars);
+    }
+
+    function setup() {
+      initCanvas();
+      createStars(200);
+      animateStars();
+    }
+
+    window.addEventListener('resize', () => {
+      initCanvas();
+      createStars(200);
+    });
+
+    setup();
+
+    // Sternschnuppen Animation
+    const shootingStarsContainer = document.getElementById('shootingStars');
+    const maxStars = 20;
+
+    function createShootingStar() {
+      const star = document.createElement('div');
+      star.classList.add('shooting-star');
+
+      // Startposition zufällig im oberen linken Bereich
+      star.style.top = Math.random() * 40 + 'vh';
+      star.style.left = Math.random() * 80 + 'vw';
+
+      // Animationsdauer zufällig (schnelle und langsame)
+      const duration = 1.5 + Math.random() * 1.5;
+      star.style.animation = `shoot ${duration}s linear forwards`;
+
+      shootingStarsContainer.appendChild(star);
+
+      // Entfernen nach Animation
+      setTimeout(() => {
+        star.remove();
+      }, duration * 1000);
+    }
+
+    // Alle 400ms eine neue Sternschnuppe erzeugen
+    setInterval(() => {
+      if (shootingStarsContainer.childElementCount < maxStars) {
+        createShootingStar();
+      }
+    }, 400);
+  </script>
 
 </body>
 </html>
